# DiffuserCam-CPP

./: CMakeLists.txt  README.md  main.cpp
SAFE_TAKES_TIME/: time.csv  timePerResolution.csv
inc/: Csvfile.hpp  Timer.hpp  classes.hpp  configs.hpp  helpers.hpp
src/: Csvfile.cpp  Timer.cpp  main.cpp
